Rename Servers to Channels (Web & iOS)

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -907,7 +907,7 @@
             style="display: flex; flex-direction: column; flex: 1; min-width: 0; overflow: hidden;">
             <!-- Server List Header -->
             <div id="serverListContainer" class="server-list-container">
-                <span class="server-label">Servers:</span>
+                <span class="server-label">Channels:</span>
                 <div id="serverList" class="server-scroller">
                     <!-- Buttons injected here -->
                 </div>
